# CampusInsight

./: .gitignore  CHANGELOG.md  Makefile  README.md
backend/: pyproject.toml
backend/src/campusinsight_api/: __init__.py  main.py
backend/src/campusinsight_api/api/: __init__.py  academic_records.py  analyses.py
backend/src/campusinsight_api/core/: __init__.py
backend/src/campusinsight_api/domain/: __init__.py  academic_records.py  analytics.py  saved_analysis.py
backend/src/campusinsight_api/services/: __init__.py  analytics_service.py  csv_validation.py  html_report_service.py  pdf_extraction.py  saved_analysis_repository.py  transcript_course_parser.py  transcript_metadata_parser.py  transcript_normalization.py
backend/tests/: test_academic_analytics_contracts.py  test_academic_record_schema.py  test_academic_records_api.py  test_course_risk_analytics.py  test_csv_validation.py  test_gpa_summary_analytics.py  test_html_report_service.py  test_main.py  test_pdf_extraction.py  test_saved_analyses_api.py  test_saved_analysis_repository.py  test_semester_and_grade_analytics.py  test_transcript_course_parser.py  test_transcript_metadata_parser.py  test_transcript_normalization.py
backend/tests/fixtures/: invalid_bad_values.csv  invalid_empty.csv  invalid_missing_column.csv
data/sample/: academic_records_sample.csv
docs/: DECISION_LOG.md  DEMO_ASSETS.md  ROADMAP.md  SHOWCASE_CHECKLIST.md  STITCH_UI_ADOPTION_PLAN.md  SYSTEM_ARCHITECTURE.md  UI_REDESIGN_PLAN.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json
(+19 files in other folders)
